--- a/tools/dockerfile/grpc_cxx/Dockerfile
+++ b/tools/dockerfile/grpc_cxx/Dockerfile
@@ -1,6 +1,8 @@
 # Dockerfile for gRPC C++
 FROM grpc/base
 
+RUN apt-get update && apt-get -y install libgflags-dev libgtest-dev
+
 # Get the source from GitHub
 RUN git clone git@github.com:google/grpc.git /var/local/git/grpc
 RUN cd /var/local/git/grpc && \
@@ -12,7 +14,12 @@ RUN cd /var/local/git/grpc/third_party/protobuf && \
   ./autogen.sh && \
   ./configure --prefix=/usr && \
   make -j12 && make check && make install && make clean
-RUN make install -C /var/local/git/grpc
+#RUN make install -C /var/local/git/grpc
 
-# Define the default command.
-CMD ["bash"]
+RUN cd /var/local/git/grpc && ls \
+  && make clean \
+  && make gens/test/cpp/util/messages.pb.cc \
+  && make interop_client \
+  && make interop_server
+
+CMD ["/var/local/git/grpc/bins/opt/interop_server", "--enable_ssl", "--port=8010"]
