Fixing a few winsocket misuses.

--- a/vsprojects/vs2013/grpc.vcxproj
+++ b/vsprojects/vs2013/grpc.vcxproj
@@ -258,7 +258,7 @@
     </ClCompile>
     <ClCompile Include="..\..\src\core\iomgr\pollset_windows.c">
     </ClCompile>
-    <ClCompile Include="..\..\src\core\iomgr\resolve_address_posix.c">
+    <ClCompile Include="..\..\src\core\iomgr\resolve_address.c">
     </ClCompile>
     <ClCompile Include="..\..\src\core\iomgr\sockaddr_utils.c">
     </ClCompile>
