Let's not strip libraries if compiled in anything other than release.
Hopefully works around #90.

--- a/templates/Makefile.template
+++ b/templates/Makefile.template
@@ -481,6 +481,7 @@ strip-shared: strip-shared_c strip-shared_cxx
 # This prevents proper debugging after running make install.
 
 strip-static_c: static_c
+ifeq ($(CONFIG),opt)
 % for lib in libs:
 % if lib.language == "c":
 % if lib.build == "all":
@@ -489,8 +490,10 @@ strip-static_c: static_c
 % endif
 % endif
 % endfor
+endif
 
 strip-static_cxx: static_cxx
+ifeq ($(CONFIG),opt)
 % for lib in libs:
 % if lib.language == "c++":
 % if lib.build == "all":
@@ -499,8 +502,10 @@ strip-static_cxx: static_cxx
 % endif
 % endif
 % endfor
+endif
 
 strip-shared_c: shared_c
+ifeq ($(CONFIG),opt)
 % for lib in libs:
 % if lib.language == "c":
 % if lib.build == "all":
@@ -509,8 +514,10 @@ strip-shared_c: shared_c
 % endif
 % endif
 % endfor
+endif
 
 strip-shared_cxx: shared_cxx
+ifeq ($(CONFIG),opt)
 % for lib in libs:
 % if lib.language == "c++":
 % if lib.build == "all":
@@ -519,6 +526,7 @@ strip-shared_cxx: shared_cxx
 % endif
 % endif
 % endfor
+endif
 
 % for p in protos:
 gens/${p}.pb.cc: ${p}.proto $(PROTOC_PLUGINS)
