Enabling extra warnings, and disabling error on warning.
We have too many warnings going unchecked. The next step is to
fix all these warnings. One can re-enable errors on warning by
doing: CPPFLAGS=-Werror make in order to start fixing them.

--- a/templates/Makefile.template
+++ b/templates/Makefile.template
@@ -139,7 +139,7 @@ LDFLAGS += $(LDFLAGS_$(CONFIG))
 
 CFLAGS += -std=c89 -pedantic
 CXXFLAGS += -std=c++11
-CPPFLAGS += -g -fPIC -Wall -Werror -Wno-long-long
+CPPFLAGS += -g -fPIC -Wall -Wextra -Wno-long-long
 LDFLAGS += -g -fPIC
 
 INCLUDES = . include gens
