--- a/tools/dockerfile/grpc_cxx/Dockerfile
+++ b/tools/dockerfile/grpc_cxx/Dockerfile
@@ -4,7 +4,7 @@ FROM grpc/base
 RUN apt-get update && apt-get -y install libgflags-dev libgtest-dev
 
 # Get the source from GitHub
-RUN git clone git@github.com:google/grpc.git /var/local/git/grpc
+RUN git clone git@github.com:grpc/grpc.git /var/local/git/grpc
 RUN cd /var/local/git/grpc && \
   git pull --recurse-submodules && \
   git submodule update --init --recursive
